5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4529/executions/1670_1392.log
== TEST (2019-04-16 18:52:12) 
-- CODE:
qva=int(input("quantidade de votos abocio"))
qvb=float(input("quantidade de votos bomelza
z=qva=qvb
x=qva/qvb)*100
y=z/qva*100
   if(qva>qvb):
	print("Ambrosio Rutra")
	print(round)		 
-- ERROR:
File "XXXX", line 2
    qvb=float(input("quantidade de votos bomelza
                                               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:52:14) 
-- CODE:
qva=int(input("quantidade de votos abocio"))
qvb=float(input("quantidade de votos bomelza
z=qva=qvb
x=qva/qvb)*100
y=z/qva*100
   if(qva>qvb):
	print("Ambrosio Rutra")
	print(round)		 
-- EXECUTION TIME:
0.214999
-- ERROR:
  File "/home/codebench/codes/1670/1392/main.py", line 2
    qvb=float(input("quantidade de votos bomelza
                                               ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:52:15) 
-- CODE:
qva=int(input("quantidade de votos abocio"))
qvb=float(input("quantidade de votos bomelza
z=qva=qvb
x=qva/qvb)*100
y=z/qva*100
   if(qva>qvb):
	print("Ambrosio Rutra")
	print(round)		 
-- EXECUTION TIME:
0.223774
-- ERROR:
  File "/home/codebench/codes/1670/1392/main.py", line 2
    qvb=float(input("quantidade de votos bomelza
                                               ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
